--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 		<h1>Selamat Datang di Websiteku</h1>
 		<hr>
 	</header>
+	<nav>
+
+	</nav>
 	<main>
-		<img src="" alt=".">
+		<img src="assets/image/profil.jpg" alt="." width="200">
+		<p>
+			Halo semua , ini website pertama yang aku buat menggunakan HTML
+		</p>
+		<blockquote>Perkenalkan namaku Ani Nur Hidayati</blockquote>
 	</main>
 	<footer>
 		copyright &copy; Aninur.
