--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Web Pertamaku</title>
 </head>
-<body>
-	<header>
+<body style="background-color: rgb(127, 241, 222);">
+	<header style="background-color: rgb(3, 63, 63);color: aliceblue;">
 		<h1>Selamat Datang di Websiteku</h1>
 		<hr>
 	</header>
-	<nav>
-
-	</nav>
+	
 	<main>
-		<img src="assets/image/profil.jpg" alt="." width="200">
+		<img src="assets/image/profil.jpg"  width="200">
 		<p>
-			Halo semua , ini website pertama yang aku buat menggunakan HTML
+			Halo semua , Perkenalkan namaku <b>Ani Nur Hidayati</b>.
+			ini website pertama yang aku buat menggunakan HTML.
 		</p>
-		<blockquote>Perkenalkan namaku Ani Nur Hidayati</blockquote>
+		<blockquote>Belajar Membuat Website itu Mudah</blockquote>
+		<a href="https://www.lp3i.ac.id/" target="_blank">Klik untuk kunjungi website kampus saya</a>
+	 	<br><br>
+		<a href="mailto:aninur.h@gmail.com">Hubungi Email Saya</a>
+		<br><br>
+		<a href="assets/Sesi 01-02 WebDesign.pdf">Download Materi Disini</a>
 	</main>
-	<footer>
+
+	<footer style="background-color: rgb(3, 63, 63); color: rgb(200, 247, 247);">
+		<hr>
 		copyright &copy; Aninur.
 	</footer>
 	
