--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 		<br><br>
 		<a href="assets/Sesi 01-02 WebDesign.pdf">Download Materi Disini</a>
 	</main>
+	<section>
+		<h4>List Hobiku: </h4>
+		<ul>
+			<li>Main Game</li>
+			<li>Travelling</li>
+		</ul>
+	</section>
 
 	<footer style="background-color: rgb(3, 63, 63); color: rgb(200, 247, 247);">
 		<hr>
