--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<li>Main Game</li>
 			<li>Travelling</li>
 		</ul>
+		<a href="form.html">Klik Halaman Baru</a>
 	</section>
 
 	<footer style="background-color: rgb(3, 63, 63); color: rgb(200, 247, 247);">
