--- a/form.html
+++ b/form.html
@@ -15,12 +15,16 @@
 			<th>Kelas</th>
 		</tr>
 		<tr>
-			<td>Nawawi</td>
+			<td>Habibi</td>
 			<td>Ase</td>
 		</tr>		
+		<tr>
+			<td>Ani Nur</td>
+			<td>Ase</td>
+		</tr>	
 	</table>
 	<hr>
-	 <form action="#">
+	 <form action="#" method="post">
 		<table>
 			<tr>
 				<td>NIM</td>
@@ -83,7 +87,9 @@
 			<tr>
 				<td></td>
 				<td>
-					<button type="button"> Simpan Data </button>
+					<button type="button"> Cek Data </button>
+					<button type="submit"> Simpan Data </button>
+					<button type="reset"> Reset Data </button>
 				</td>
 			</tr>
 		</table>
