--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
 	</main>
 	<section>
 		<h4>List Hobiku: </h4>
+		<!-- Unordered List, list berupa bullets -->
 		<ul>
 			<li>Main Game</li>
 			<li>Travelling</li>
 		</ul>
+		<!-- Ordered List, list berupa angka -->
+		<ol>
+			<li>Main Game</li>
+			<li>Travelling</li>
+		</ol>
 		<a href="form.html">Klik Halaman Baru</a>
 	</section>
 
